# ordering_service

./: Cargo.toml  README.md
src/: main.rs
src/docs/: README.md
src/router/: mod.rs
src/router/libs/: mod.rs
src/router/libs/adapter/kafka/: mod.rs
src/router/libs/adapter/mongo/: mod.rs
src/router/libs/constant/: mod.rs
src/router/libs/domain/: mod.rs  model.rs  repository.rs  usecase.rs  utilities.rs
src/router/libs/infrastructure/: mod.rs
src/router/libs/port/mongo/: mod.rs
src/router/order/: mod.rs
src/tests/: mod.rs
